Comienzo blade